syntax = "proto3";              
//Fenni

option java_package = "emu.lunarcore.proto";

import "PlatformType.proto";
import "LanguageType.proto";

message PlayerLoginCsReq {
	uint32 client_res_version = 15;//？？
	string rogue_info_data = 1;
	PlatformType platform_type = 6;
	string signature = 11;
	uint64 login_random = 8;
	LanguageType language = 14;
}